--- a/src/style.css
+++ b/src/style.css
@@ -206,3 +206,38 @@ h1 {
     font-size: 16px;
     margin-top: 10px;
 }
+
+/* Results Container */
+.results-container {
+    display: flex;
+    justify-content: center;
+    flex-wrap: wrap;
+    gap: 10px;
+    margin-top: 20px;
+}
+
+/* Individual Result Box */
+.result-box {
+    width: 50px;
+    height: 50px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-size: 16px;
+    font-weight: bold;
+    color: white;
+    border-radius: 5px;
+    text-transform: uppercase;
+}
+
+.result-box.green {
+    background-color: green;
+}
+
+.result-box.red {
+    background-color: red;
+}
+
+.result-box.black {
+    background-color: black;
+}
